--- a/00-holds/cssBoxes.css
+++ b/00-holds/cssBoxes.css
@@ -1,3 +1,12 @@
+
+
+
+.col-half{
+  /*width: 5%;*/
+  width: 4.9%;
+  float: left;
+  border: 1px solid red;
+}
 .col-half{
   /*width: 5%;*/
   width: 4.9%;
