--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,10 +1,15 @@
 
 
 body{
-  padding-left: 1%;
+  padding-left: 2%;
   padding-top: 1%;
-  padding-right: 3%;
+  padding-right: 2%;
   padding-bottom: 1%;
+}
+
+video{
+  /*background-size: contain;*/
+  position: center;
 }
 
 .bgpic {
@@ -138,13 +143,32 @@ video {
   display: none;
 }
 
+#button-panel{
+  padding-top: 50px;
+}
+#parameter-input-fields{
+ padding-top: 50px;
+  /*padding-left: 10px;*/
+  /*padding-right: 10px;*/
+}
+#instructions-button{
+  /*right: 0px;*/
+}
+.col-right{
+  padding-top: 50px;
+}
+.right{
+  float: right;
+}
+.param-inputs{
+  /*border-top: 20px;*/
+}
 
 #random-box{
   width: 100px;
   height: 100px;
   border: 5px solid black;
 }
-
 #demo-movie-div {
   display: hide;
 }
@@ -152,7 +176,6 @@ video {
 .pad-top{
   padding-top: 5px;
 }
-
 .col-half{
   /*width: 5%;*/
   width: 4.9%;
@@ -163,67 +186,111 @@ video {
   /*width: 5%;*/
   width: 4.9%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 .col-1{
   /*width: 8.33333%;*/
   width: 8.3%;
   float: left;
-/*border: 1px solid red;*/
+border: 1px solid red;
+}
+.col-15{
+  /*width: 8.33333%;*/
+  width: 7%;
+  float: left;
+border: 1px solid red;
+}
+.col-16{
+  /*width: 8.33333%;*/
+  width: 12%;
+  float: left;
+border: 1px solid red;
+}
+.col-17{
+  /*width: 8.33333%;*/
+  width: 16%;
+  float: left;
+border: 1px solid red;
 }
 .col-2{
   /*width: 16.66666%;*/
   width: 16.6%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 .col-25{
   /*width: 20%;*/
   width: 19.9%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
+.col-26{
+  /*width: 20%;*/
+  width: 21%;
+  float: left;
+  border: 1px solid red;
+}
+.col-27{
+  /*width: 20%;*/
+  width: 23%;
+  float: left;
+  border: 1px solid red;
+}
+
 .col-3{
   /*width: 25%;*/
   width: 24.9%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 .col-35{
   /*width: 30%;*/
   width: 29.9%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
+.col-36{
+  /*width: 30%;*/
+  width: 28.5%;
+  float: left;
+  border: 1px solid red;
+}
+
 .col-30{
   /*width: 26.6%;*/
   width: 26.45%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 
 .col-4{
   /*width: 33.33333%;*/
   width: 33.3%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 .col-5{
   /*width: 41.66666%;*/
   width: 41.6%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 .col-6{
   width: 50.00%;
   float: left;
-/*border: 1px solid red;*/
+border: 1px solid red;
 }
 .col-7{
   width: 58.33333%;
   float: left;
-/*border: 1px solid red;*/
+border: 1px solid red;
 }
+.col-75{
+  width: 65%;
+  float: left;
+border: 1px solid red;
+}
+
 .col-7minus{
   width: 54.5%;
   float: left;
@@ -232,18 +299,18 @@ video {
 .col-8{
   width: 66.66666%;
   float: left;
-/*border: 1px solid red;*/
+border: 1px solid red;
 }
 .col-9{
   /*width: 75.00%;*/
   width: 74.65%;
   float: left;
-/*border: 1px solid red;*/
+border: 1px solid red;
 }
 .col-10{
   width: 83.33333%;
   float: left;
-/*border: 1px solid red;*/
+border: 1px solid red;
 }
 .col-11{
   width: 91.66666%;
@@ -253,7 +320,7 @@ video {
 .col-12{
   width: 100.00%;
   float: left;
-  /*border: 1px solid red;*/
+  border: 1px solid red;
 }
 .500{
   height: 500px;
@@ -293,14 +360,22 @@ h1{
 
 .home{
   position: fixed;
-  top: 93%;
-  right: 75;
+  text-align: center;
+  top: 77%;
+  right: 20%;
+  width: 100px;
+}
+.home-fixed{
+  float: right;
+  width: 40px;
 }
 
+
 #upload-button{
-  position: fixed;
+  /*position: fixed;*/
   top: 93%;
   left: 2%;
+  width: 100px:;
 }
 
 canvas {
