user now able to manually enter parameters or run functions with recommended settings

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -154,6 +154,9 @@ video {
 #instructions-button{
   /*right: 0px;*/
 }
+#parameter-input-submit-button{
+  width: 140px;
+}
 .col-right{
   padding-top: 50px;
 }
