stable enough, disconnected user controlled stabilizer for the moment

--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -120,7 +120,7 @@
   	<input placeholder='Warning Trip X' type='text' name='name' class='btn param-inputs' id='testing-input-redline-x'></input>
   	<input placeholder='Warning Trip Y' type='text' name='name' class='btn param-inputs' id='testing-input-redline-y'></input>
   	<input placeholder='Warning Trip Z' type='text' name='name' class='btn param-inputs' id='testing-input-redline-z'></input>
-  	<hr>
+  	<input placeholder='Data Stabilizer' type='text' name='name' class='btn param-inputs' id='testing-input-data-stabilizer'></input>
   	<input type='submit' value='Load Profile' class='btn' id='parameter-input-submit-button'></input>
   	<button class='btn center' id='run-program-button'>Run Program</button>
   </div>
@@ -133,8 +133,8 @@
 
 <div class='col-1 col-right hide-this'>
 	<div class='right'>
-	<button class='btn' id='instructions-button'>Instructions</button>
-	<a href="./index.html" class="btn home-fixed center" id='home-button'>Home</a>
+	<button class='btn shadow-r' id='instructions-button'>Instructions</button>
+	<a href="./index.html" class="btn home-fixed center shadow-r" id='home-button'>Home</a>
 </div>
 </div>
 
