--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -144,12 +144,15 @@ video {
 }
 
 #button-panel{
-  padding-top: 50px;
+  padding-top: 100px;
 }
 #parameter-input-fields{
- padding-top: 50px;
+ padding-top: 100px;
   /*padding-left: 10px;*/
   /*padding-right: 10px;*/
+}
+.col-right{
+  padding-top: 100px;
 }
 #instructions-button{
   /*right: 0px;*/
@@ -157,9 +160,10 @@ video {
 #parameter-input-submit-button{
   width: 140px;
 }
-.col-right{
-  padding-top: 50px;
+/*.shadow-r{
+  box-shadow: 8px 3px 3px gray;
 }
+*/
 .right{
   float: right;
 }
