--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -171,11 +171,6 @@ video {
   /*border-top: 20px;*/
 }
 
-#random-box{
-  width: 100px;
-  height: 100px;
-  border: 5px solid black;
-}
 #demo-movie-div {
   display: hide;
 }
@@ -187,115 +182,115 @@ video {
   /*width: 5%;*/
   width: 4.9%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-half{
   /*width: 5%;*/
   width: 4.9%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-1{
   /*width: 8.33333%;*/
   width: 8.3%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-15{
   /*width: 8.33333%;*/
   width: 7%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-16{
   /*width: 8.33333%;*/
   width: 12%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-17{
   /*width: 8.33333%;*/
   width: 16%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-2{
   /*width: 16.66666%;*/
   width: 16.6%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid;*/
 }
 .col-25{
   /*width: 20%;*/
   width: 19.9%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-26{
   /*width: 20%;*/
   width: 21%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-27{
   /*width: 20%;*/
   width: 23%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 .col-3{
   /*width: 25%;*/
   width: 24.9%;
   float: left;
-  border: 1px solid red;
+  border: 1px solid;
 }
 .col-35{
   /*width: 30%;*/
   width: 29.9%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-36{
   /*width: 30%;*/
   width: 28.5%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 .col-30{
   /*width: 26.6%;*/
   width: 26.45%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 
 .col-4{
   /*width: 33.33333%;*/
   width: 33.3%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-5{
   /*width: 41.66666%;*/
   width: 41.6%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .col-6{
   width: 50.00%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-7{
   width: 58.33333%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-75{
   width: 65%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 
 .col-7minus{
@@ -306,18 +301,18 @@ border: 1px solid red;
 .col-8{
   width: 66.66666%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-9{
   /*width: 75.00%;*/
   width: 74.65%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-10{
   width: 83.33333%;
   float: left;
-border: 1px solid red;
+/*border: 1px solid red;*/
 }
 .col-11{
   width: 91.66666%;
@@ -327,14 +322,12 @@ border: 1px solid red;
 .col-12{
   width: 100.00%;
   float: left;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .500{
   height: 500px;
   /*border: 1px solid red;*/
 }
-
-
 
 .space {
   padding-bottom: 5px;
@@ -386,20 +379,16 @@ h1{
 }
 
 canvas {
-  /*z-index: -1;*/
-  /*width: 100%;*/
   height: auto%;
   width: 100%;
-  /*height:2500px;*/
-  /*background: url(../images/compas.jpg) no-repeat 50% 50%;*/
-  /*float: right;*/
-  /*background: black;*/
-  /*border: 1px solid black;*/
 }
 #canvas-testing {
   height: auto%;
   width: 100%;
-   /*border: 1px solid black;*/
+}
+
+#canvas-car-model-back {
+   border: none;
 }
 
 button{
@@ -416,7 +405,3 @@ button{
   top: 3%;
   right: 75;
 }
-
-/*.center2 {*/
-  /*position: absolute;*/
-/*}*/
