refactoring, touching up features

--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -69,39 +69,35 @@
 					<div><button class='btn' id='location-route-function-button'>Location</button></div>
 				</h4>
 				<hr>
-	<div class='btn' id='upload-button'>
-		<input type="file" id="files" name="files[]" multiple />
-		<output id="list"></output>
-	</div>
-				<script>
-				function handleFileSelect(evt) {
-   		var files = evt.target.files; // FileList object
-	    // Loop through the FileList and render image files as thumbnails.
-	    for (var i = 0, f; f = files[i]; i++) {
-	      // Only process image files.
-	      if (!f.type.match('image.*')) {
-	      	continue;
-	      }
-	      var reader = new FileReader();
-	      // Closure to capture the file information.
-	      reader.onload = (function(theFile) {
-	      	return function(e) {
-	          // Render thumbnail.
-	          var span = document.createElement('span');
-	          span.innerHTML = ['<img class="thumb" src="', e.target.result,
-	          '" title="', escape(theFile.name), '"/>'].join('');
-	          document.getElementById('list').insertBefore(span, null);
-	        };
-	      })(f);
-	      // Read in the image file as a data URL.
-	      reader.readAsText(f);
-	      // console.log(files);
-	    }
-	  // console.log(files);
-	}
-	document.getElementById('files').addEventListener('change', handleFileSelect, false);
-	</script>
+	<!-- <div class='btn' id='upload-button'> -->
+		<!-- <input type="file" id="files" name="files[]" multiple /> -->
+		<!-- <output id="list"></output> -->
+	<!-- </div> -->
+<input type="file" id="files" name="files[]" multiple />
+<output id="list"></output>
+
+<script>
+  function handleFileSelect(evt) {
+    var files = evt.target.files; // FileList object
+
+    // files is a FileList of File objects. List some properties.
+    var output = [];
+    for (var i = 0, f; f = files[i]; i++) {
+      output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
+                  f.size, ' bytes, last modified: ',
+                  f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
+                  '</li>');
+    }
+    document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
+  console.log(files);
+  }
+  document.getElementById('files').addEventListener('change', handleFileSelect, false);
+
+</script>
+
 </div>
+
+
 
 <div class='col-3 hide-this'></div>
 
@@ -120,6 +116,8 @@
   	<input placeholder='Warning Trip Y' type='text' name='name' class='btn param-inputs' id='testing-input-redline-y'></input>
   	<input placeholder='Warning Trip Z' type='text' name='name' class='btn param-inputs' id='testing-input-redline-z'></input>
   	<input placeholder='Data Stabilizer' type='text' name='name' class='btn param-inputs' id='testing-input-data-stabilizer'></input>
+  	<textarea placeholder='File Contents' type='text-area' name='name' class='btn param-inputs' id='testing-input-file-contents'>
+  </textarea>
   	<input type='submit' value='Load Profile' class='btn' id='parameter-input-submit-button'></input>
   	<button class='btn center' id='run-program-button'>Run Program</button>
   </div>
