--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -243,7 +243,7 @@ video {
   /*width: 25%;*/
   width: 24.9%;
   float: left;
-  border: 1px solid;
+  border: 1px solid transparent;
 }
 .col-35{
   /*width: 30%;*/
