full refactor, main show all function works except for X,Y,Z data, continue to tidsy up the rest of the functions

--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
 
   <h1><a class='btn3' id='click-to-enter' href="./data_plot.html" >Click to Enter Garage</a></button></button></h1>
   <!-- <button id='testing-function' class="btn">Testing Function</button> -->
-  <div><button class='btn' id='test-functions'>Test Functions</button></div>
+  <!-- <div><button class='btn' id='test-functions'>Test Functions</button></div> -->
 
 
     <canvas id="canvas-testing">
