--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -22,10 +22,10 @@
 </head>
 <body id='bg-image'>
 
-	<homecontent>
-	</homecontent>
+<homecontent>
+</homecontent>
 
-	<datacontent>
+<datacontent>
 		<div class='hide-this'>
 			<h1><button class='btn2' id='testing-area'>Testing Area</button></h1>
 			<hr>
@@ -41,10 +41,9 @@
 			<div id="left-right-straight-window" class='center btn'></div>
 			<div id="and-window" class='center btn'></div>
 			<div id="braking-accelerating-in-words" class='center btn'></div>
-			
-				<video height="160px" width="100%" src="../videos/Flagstaff1.webm" controls>
-				Your browser is far too ghetto to play this video :-)
-				</video>
+			<video height="160px" width="100%" src="../videos/Flagstaff1.webm" controls>
+			Your browser is far too ghetto to play this video :-)
+			</video>
 		</div>
 
 		<div class='col-36 hide-then-show'>
@@ -60,7 +59,6 @@
 						<div><button class='btn' id='freeze-button'>Pause Stream</button></div>
 						<div><button class='btn' id='reset-button'>Reset</button></div>
 					<h4 class="hide-this"/>
-					<div><button class='btn' id='test-functions-button'>Test Functions</button></div>
 					<div><button class='btn' id='show-all-data-button'>Show All Data</button></div>
 					<div><button class='btn' id='car-model-back-button'>Car Model From Back</button></div>
 					<div><button class='btn' id='car-model-top-button'>Car Model From Top</button></div>
@@ -69,33 +67,57 @@
 					<div><button class='btn' id='location-route-function-button'>Location</button></div>
 				</h4>
 				<hr>
-	<!-- <div class='btn' id='upload-button'> -->
-		<!-- <input type="file" id="files" name="files[]" multiple /> -->
-		<!-- <output id="list"></output> -->
-	<!-- </div> -->
-<input type="file" id="files" name="files[]" multiple />
-<output id="list"></output>
 
-<script>
-  function handleFileSelect(evt) {
-    var files = evt.target.files; // FileList object
+			<style>
+  			#byte_content {
+    			margin: 5px 0;
+    			max-height: 100px;
+  			}
+  			#byte_range { margin-top: 5px; }
+			</style>
 
-    // files is a FileList of File objects. List some properties.
-    var output = [];
-    for (var i = 0, f; f = files[i]; i++) {
-      output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
-                  f.size, ' bytes, last modified: ',
-                  f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
-                  '</li>');
-    }
-    document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
-  console.log(files);
-  }
-  document.getElementById('files').addEventListener('change', handleFileSelect, false);
+				<input type="file" id="files" name="file" /> Read bytes: 
+				<span class="readBytesButtons">
+  			<button>entire file</button>
+				</span>
+				<div id="byte_range"></div>
+				<div id="byte_content"></div>
 
-</script>
+			<script>
+  			function readBlob() {
+    			var files = document.getElementById('files').files;
+		    	if (!files.length) {
+  	  		  alert('Please select a file!');
+   		   		return;
+   		 		}
+  	  			var file = files[0];
+   			 		var start = 0;
+   			 		var stop = file.size - 1;
+  	  			var reader = new FileReader();
+		 	  	  // If we use onloadend, we need to check the readyState.
+    				reader.onloadend = function(evt) {
+     		 			if (evt.target.readyState == FileReader.DONE) { // DONE == 2
+       		 			document.getElementById('byte_content').textContent = evt.target.result;
+        				document.getElementById('byte_range').textContent = 
+         			   	['Read bytes: ', start + 1, ' - ', stop + 1,
+           		  	' of ', file.size, ' byte file'].join('');
+     					}
+    				};
 
-</div>
+    			var blob = file.slice(start, stop + 1);
+    			reader.readAsBinaryString(blob);
+    			console.log(file[1]);
+  			}
+  
+  			document.querySelector('.readBytesButtons').addEventListener('click', function(evt) {
+    			if (evt.target.tagName.toLowerCase() == 'button') {
+      			readBlob();
+    			}
+ 			  }, false);
+
+			</script>
+
+		</div>
 
 
 
@@ -164,6 +186,15 @@
 
 </datacontent>
 
+<carmodelback>	
+	<div><button class='btn' id='reset-button3'>Reset</button></div>
+	<div class='col-3'></div>
+	<div class='col-6'>
+		<canvas id='car-model-back'>
+		</canvas>
+	</div>
+	<div class='col-3'></div>
+</carmodelback>
 
 	<carmodeltop>
 		<div><button class='btn' id='reset-button2'>Reset</button></div>
@@ -176,15 +207,6 @@
 	</carmodeltop>
 
 
-	<carmodelback>	
-		<div><button class='btn' id='reset-button3'>Reset</button></div>
-		<div class='col-3'></div>
-		<div class='col-6'>
-			<canvas id='car-model-back2'>
-			</canvas>
-		</div>
-		<div class='col-3'></div>
-	</carmodelback>
 
 
 	<wheelmodel>
