--- a/Application/stylesheets/style.css
+++ b/Application/stylesheets/style.css
@@ -29,6 +29,10 @@ video{
   /*width: auto;*/
 }
 
+#files{
+  width: 90%;
+}
+
 #bg-image3 {
   /*opacity: .6;*/
   background-image: url("../images/garage.jpg");
