--- a/Application/stylesheets/style.css
+++ b/Application/stylesheets/style.css
@@ -33,6 +33,10 @@ video{
   width: 90%;
 }
 
+.courier-font{
+  font-family: Courier New;
+}
+
 #bg-image3 {
   /*opacity: .6;*/
   background-image: url("../images/garage.jpg");
