--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -114,6 +114,7 @@
   	<input placeholder='Report Trip Z' type='text' name='name' class='btn param-inputs' id='testing-input-redline-z'></input>
   	<input placeholder='Stabilizer Visuals' type='text' name='name' class='btn param-inputs' id='testing-input-data-stabilizer'></input>
   	<input placeholder='Stabilizer Words' type='text' name='name' class='btn param-inputs' id='testing-input-words-stabilizer'></input>
+  	<input placeholder='Stabilizer Data' type='text' name='name' class='btn param-inputs' id='testing-input-data-stabilizer-data'></input>
 
   	<textarea placeholder='File Contents' type='text-area' name='name' class='btn param-inputs' id='testing-input-file-contents'>
   </textarea>
@@ -145,12 +146,12 @@
 		<hr>
 		<canvas id="car-model-back" class='col-md-8'>
 		</canvas>
-		<h3>
+		
 			<div id="x-axis-window" class='btn' ></div>
 			<div id="y-axis-window" class='btn' ></div>
 			<div id="z-axis-window" class='btn' ></div>
 			<div id="data-points-window" class='btn' ></div>
-		<h3>
+		
 	</div>
 
 		<div class='col-9'>
