--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -209,8 +209,13 @@
 		Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the data will be dynamically printed in the "Show My Report" section </p>
 		<p><input class='btn' placeholder='Report Trip Z'></input>
 		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section</p>
-		<p><input class='btn' placeholder='Data Stabilizer'></input>
-		<p>Data Stabilizer: The sensors on your smartphone are extremely sensitive, and as a result the different respresentations of the data can appear to be very jerky, and in some cases, difficult to interpret.  The higher the number entered into this field, the more stable the respresentations of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate, and will become more of an average as the number increases.  Recommend less than 50</p>
+		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
+		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to interpret.  The higher the number entered into this field, the more stable the graphic respresentations (pictures) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate, and will become more of an average as the number increases.  Recommend less than 50</p>
+		<p><input class='btn' placeholder='Stabilizer Words'></input>
+		The higher the number entered into this field, the more stable the word print-outs become('driving straight' etc).  Recommend less than 50</p>
+		<p><input class='btn' placeholder='Stabilizer Data'></input>
+		The higher the number entered into this field, the more stable the data print-outs become(X, Y, Z accelerometer data etc).  Recommend less than 50</p>
+
 		<p><input value='Load Profile' class='btn'></input>
 		Push this button after entering your custom parameters.  If any fields are left blank, they will load the default values so you may pick and choose which custom parameters you would like to test with</p>
   		<p><button class='btn center' id='run-program-button'>Run Program</button>
