--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -33,7 +33,7 @@
 			<div id="and-window" class='center btn'></div>
 			<div id="braking-accelerating-in-words" class='center btn'></div>
 			<video height="160px" width="100%" src="../videos/Flagstaff1.webm" controls>
-			Your browser is far too ghetto to play this video :-)
+			Your browser can not play this video
 			</video>
 		</div>
 
