--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -47,7 +47,9 @@
 
 		<div class='col-2 button-panel-right' id='button-panel'>
 			<input type="file" id="files" class='btn' name="file"></input>
-  		<button class='btn'>Show File</button>
+			<span class="readBytesButtons">
+  				<button class='btn'>Show File</button>
+			</span>
 				<div id="byte_range"></div>
 				<div id="byte_content"></div>
 			<hr>
@@ -58,39 +60,49 @@
 			<span class="readBytesButtons"></span>
 
 
-			<script>
-  			function readBlob() {
-    			var files = document.getElementById('files').files;
-		    	if (!files.length) {
-  	  		  alert('Please select a file!');
-   		   		return;
-   		 		}
-  	  			var file = files[0];
-   			 		var start = 0;
-   			 		var stop = file.size - 1;
-  	  			var reader = new FileReader();
-		 	  	  // If we use onloadend, we need to check the readyState.
-    				reader.onloadend = function(evt) {
-     		 			if (evt.target.readyState == FileReader.DONE) { // DONE == 2
-       		 			document.getElementById('byte_content').textContent = evt.target.result;
-        				document.getElementById('byte_range').textContent = 
-         			   	['Read bytes: ', start + 1, ' - ', stop + 1,
-           		  	' of ', file.size, ' byte file'].join('');
-     					}
-    				};
+<style>
+  #byte_content {
+    margin: 5px 0;
+    max-height: 100px;
+  }
+  #byte_range { margin-top: 5px; }
+</style>
 
-    			var blob = file.slice(start, stop + 1);
-    			reader.readAsBinaryString(blob);
-    			console.log(file[1]);
-  			}
+<script>
+  function readBlob() {
+
+    var files = document.getElementById('files').files;
+    if (!files.length) {
+      alert('Please select a file!');
+      return;
+    }
+
+    var file = files[0];
+    var start = 0;
+    var stop = file.size - 1;
+
+    var reader = new FileReader();
+
+    // If we use onloadend, we need to check the readyState.
+    reader.onloadend = function(evt) {
+      if (evt.target.readyState == FileReader.DONE) { // DONE == 2
+        document.getElementById('byte_content').textContent = evt.target.result;
+        document.getElementById('byte_range').textContent = 
+            ['Read bytes: ', start + 1, ' - ', stop + 1,
+             ' of ', file.size, ' byte file'].join('');
+      }
+    };
+
+    var blob = file.slice(start, stop + 1);
+    reader.readAsBinaryString(blob);
+  }
   
-  			document.querySelector('.readBytesButtons').addEventListener('click', function(evt) {
-    			if (evt.target.tagName.toLowerCase() == 'button') {
-      			readBlob();
-    			}
- 			  }, false);
-
-			</script>
+  document.querySelector('.readBytesButtons').addEventListener('click', function(evt) {
+    if (evt.target.tagName.toLowerCase() == 'button') {
+      readBlob();
+    }
+  }, false);//THANKYOU ANDREW J FOR THIS SNIPPET
+</script>
 
 		</div>
 
