--- a/Application/views/data_plot.html
+++ b/Application/views/data_plot.html
@@ -216,11 +216,11 @@
 		<p><input class='btn' placeholder='Skip Data Points'></input>
 		Skip this amount of data points between each point while allowing data to still be presented in proper time (larger files, slower computers)</p>
 		<p><input class='btn' placeholder='Report Trip X'></input>
-		The number (N) entered represents N meters/second^2.  When the force in the X direction (lateral force on the car) exceeds this number, the data will be dynamically printed in the "Show My Report" section</p>
+		The number (N) entered represents N meters/second^2.  When the force in the X direction (lateral force on the car) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to turning and lateral force will also turn red.</p>
 		<p><input class='btn' placeholder='Report Trip Y'></input>
-		Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the data will be dynamically printed in the "Show My Report" section </p>
+		Report Trip Y: The number (N) entered represents N meters/second^2.  When the force in the Y direction (braking and acceleration) exceeds this number, the the data will be dynamically printed in the "Show My Report" section.  Certain visuals related to braking will also turn red. </p>
 		<p><input class='btn' placeholder='Report Trip Z'></input>
-		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section</p>
+		Report Trip Z: The number (N) entered represents N meters/second^2.  When the force in the Z direction (bumps and dips) exceeds this number, the data will be dynamically printed in the "Show My Report" section. Certain visuals related to bumps and dips will also turn red.</p>
 		<p><input class='btn' placeholder='Stabilizer Visuals'></input>
 		The sensors on your smartphone are extremely sensitive. As a result, the different respresentations of the data can appear to be very jerky, and in some cases, difficult to interpret.  The higher the number entered into this field, the more stable the graphic respresentations (pictures) of the data become.  Although a higher number will produce 'cleaner' results, the data will be slightly less accurate, and will become more of an average as the number increases.  Recommend less than 50</p>
 		<p><input class='btn' placeholder='Stabilizer Words'></input>
